# ask_sg_data

./: README.md  pyproject.toml  write.sh
data/embeddings/: collections_embeddings.index
data/input/: all_collections.json
data/input/collections_metadata/: 2nd_Hand_Goods_Collection_Points.json  3G_Public_Cellular_Mobile_Telephone_Services_-_Average_Drop_Call_Rate.json  3G_Public_Cellular_Mobile_Telephone_Services_-_Average_Success_Rate_Across_All_Cells.json  3G_Public_Cellular_Mobile_Telephone_Services__-_Nation-wide_Service_Coverage.json  ABC_Waters_Completed.json  ABC_Waters_Construction.json  ABC_Waters_Sites.json  ACRA_Information_on_Corporate_Entities.json  AED_locations.json  APEC_architects_registered_under_BOA.json  ASEAN_architects_registered_under_BOA.json  Academic_Programmes.json  Active_Cases_for_Home_Office_Scheme.json  Active_Cases_of_Renting_Out_of_Flat.json  Active_Cemeteries.json  Adoption_Applications_Processed_by_GIA.json  Adult_Protection.json  Adult_Protection_Investigations.json  Aedes_Mosquito_Breeding_Habitats_-_Central.json  Aedes_Mosquito_Breeding_Habitats_-_North_East.json  Aedes_Mosquito_Breeding_Habitats_-_North_West.json  Aedes_Mosquito_Breeding_Habitats_-_South_East.json  Aedes_Mosquito_Breeding_Habitats_-_South_West.json  After_Death_Facilities.json  Age-Standardised_Mortality_Rate_for_Ischaemic_Heart_Disease,_Stroke_and_Cancer.json  Age-standardised_incidence_rate_and_prevalence_rate_for_definitive_dialysis_and_transplant_patients.json  (+1335 more)
src/ask_sg_data/: api.py  config.py  get_info_data.py  models.py  search.py  startup.py  utils.py
